# ORT

./: .gitignore  Cargo.toml  README.md  build.ps1  build.sh  package.json  pyproject.toml
example/: 02_simple_array.ort  06_mixed_array.ort
python/: pyproject.toml
python/ort/: __init__.py  generator.py  parser.py  value.py
rust/: error.rs  generator.rs  lib.rs  ort_value.rs  parser.rs  serde_compat.rs  value.rs
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: generator.ts  index.ts  parser.ts  value.ts
